change about page photo

--- a/about/index.html
+++ b/about/index.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 
 	<meta name="viewport" content="width=device-width">
-	
+
 	<meta name="description" content="Websites! @bysusanlin">
 	<meta name="author" content="Susan Lin, Susan L., Susan, bysusanlin, @bysusanlin">
 
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
-		
+
 	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
@@ -36,17 +36,17 @@
 
 				<br><br>
 
-				She sketches incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://sketch.bysusanlin.com/tagged/ghiblistainedglass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all. 
+				She sketches incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://sketch.bysusanlin.com/tagged/ghiblistainedglass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all.
 
 				<br><br>
 
 				Elsewhere on the internet: <br>
-				<a href="http://sketch.bysusanlin.com">Blog</a> | 
-				<a href="http://instagram.com/susanl">Instagram</a> | 
-				<a href="http://twitter.com/bysusanlin">Twitter</a> | 
-				<a href="http://pinterest.com/susanl/pins">Pinterest</a> | 
+				<a href="http://sketch.bysusanlin.com">Blog</a> |
+				<a href="http://instagram.com/susanl">Instagram</a> |
+				<a href="http://twitter.com/bysusanlin">Twitter</a> |
+				<a href="http://pinterest.com/susanl/pins">Pinterest</a> |
 				<a href="http://dribbble.com/bysusanlin">Dribbble</a> |
-				<a href="http://codepen.io/bysusanlin">CodePen</a> | 
+				<a href="http://codepen.io/bysusanlin">CodePen</a> |
 				<a href="http://patreon.com/susan">Patreon</a>
 
 			</p>
@@ -56,18 +56,13 @@
 		<div>
 
 			<br>
-			<img src="/images/about/bysusanlin.painting.jpg">
+			<img src="/images/about/bysusanlin.tattoo.jpg">
 			<br>
-			<em>
-				'Sleeping Totoro' is available as a canvas print in <a href="http://www.shop.bysusanlin.com">my shop.</a>
-			</em>
-
-			<br><br>
 
 			<p>
 				I drafted, designed, and coded this bit of the internet. The landing page is made with love to the Mother series.
 				<br><br>
-				<a href="http://sketch.bysusanlin.com/tagged/pixel-art">See the pixel artwork process.</a> 
+				<a href="http://sketch.bysusanlin.com/tagged/pixel-art">See the pixel artwork process.</a>
 				<br>
 				<a href="https://github.com/bysl/bysl.github.io">View the source code on Github.</a>
 			</p>
@@ -86,12 +81,12 @@
 				<li>
 					About
 				</li>
-			</a>			
+			</a>
 			<a href="/design">
 				<li>
 					Design
 				</li>
-			</a>			
+			</a>
 			<a href="/illustration">
 				<li>
 					Illustration
@@ -101,12 +96,12 @@
 				<li>
 					Talks
 				</li>
-			</a>			
+			</a>
 			<a href="http://sketch.bysusanlin.com">
 				<li>
 					Blog
 				</li>
-			</a>			
+			</a>
 			<a href="http://www.shop.bysusanlin.com">
 				<li>
 					Shop
@@ -119,7 +114,7 @@
 			</a>
 			<li class="typeLowlight">
 				&mdash;
-			</li>								
+			</li>
 			<li class="typeHighlight">
 				&#10048;
 			</li>
@@ -158,19 +153,19 @@
 				<li>
 					Talks
 				</li>
-			</a>			
+			</a>
 
 			<a href="http://sketch.bysusanlin.com">
 				<li>
 					Blog
 				</li>
-			</a>			
+			</a>
 
 			<a href="http://www.shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
-			</a>			
+			</a>
 
 			<a href="https://www.patreon.com/susan">
 				<li>
@@ -182,7 +177,7 @@
 
 		<div class="clear"></div>
 
-		<div class="footnote"> 
+		<div class="footnote">
 			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
 			Last updated July 2015. P.S. I believe in you.
