--- a/about/index.html
+++ b/about/index.html
@@ -102,7 +102,7 @@
 					Blog
 				</li>
 			</a>
-			<a href="http://www.shop.bysusanlin.com">
+			<a href="http://www.http://shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
@@ -161,7 +161,7 @@
 				</li>
 			</a>
 
-			<a href="http://www.shop.bysusanlin.com">
+			<a href="http://www.http://shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
