fixes typo with shop url NO FOR REAL

--- a/design/index.html
+++ b/design/index.html
@@ -169,7 +169,7 @@
 					Blog
 				</li>
 			</a>
-			<a href="http://www.http://shop.bysusanlin.com">
+			<a href="http://shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
@@ -228,7 +228,7 @@
 				</li>
 			</a>
 
-			<a href="http://www.http://shop.bysusanlin.com">
+			<a href="http://shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
