--- a/writing/index.html
+++ b/writing/index.html
@@ -186,7 +186,7 @@
 					Blog
 				</li>
 			</a>
-			<a href="http://www.http://shop.bysusanlin.com">
+			<a href="http://shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
@@ -244,7 +244,7 @@
 				</li>
 			</a>
 
-			<a href="http://www.http://shop.bysusanlin.com">
+			<a href="http://shop.bysusanlin.com">
 				<li>
 					Shop
 				</li>
