updatnig src branch so it is actually up to date now

--- a/src/_tpls/footer.html
+++ b/src/_tpls/footer.html
@@ -1,42 +1,63 @@
-
-	<footer>
+<footer>
 
 		<ul>
 
-			<a href="about">
+			<a href="/">
 				<li>
-					01. About
+					Index
 				</li>
 			</a>
 
-			<a href="/work">
+			<a href="/about">
 				<li>
-					02. Work
+					About
+				</li>
+			</a>
+
+			<a href="/design">
+				<li>
+					Design
+				</li>
+			</a>
+
+			<a href="/illustration">
+				<li>
+					Illustration
 				</li>
 			</a>
 
 			<a href="/talks">
 				<li>
-					03. Talks
-				</li>
-			</a>			
-
-			<a href="http://sketch.bysusanlin.com">
-				<li>
-					04. Blog
+					Talks
 				</li>
 			</a>
 
-			<li class="typeHighlight">
-				&#10048;
-			</li>
+			<a href="http://sketch.bysusanlin.com">
+				<li>
+					Blog
+				</li>
+			</a>
+
+			<a href="http://shop.bysusanlin.com">
+				<li>
+					Shop
+				</li>
+			</a>
+
+			<a href="https://www.patreon.com/susan">
+				<li>
+					Patreon
+				</li>
+			</a>
 
 		</ul>
 
 		<div class="clear"></div>
 
-		<div class="footnote"> 
-			Last updated April 2015. P.S. I believe in you.
+		<div class="footnote">
+			<img src="/images/sprite-fp.png" width="27px" class="sprite">
+			<br>
+			Last updated September 2015. P.S. I believe in you.
 		</div>
 
 	</footer>
