--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -9,25 +9,40 @@
 				<li>
 					About
 				</li>
-			</a>			
-			<a href="/work">
+			</a>
+			<a href="/design">
 				<li>
-					Work
+					Design
+				</li>
+			</a>
+			<a href="/illustration">
+				<li>
+					Illustration
 				</li>
 			</a>
 			<a href="/talks">
 				<li>
 					Talks
 				</li>
-			</a>			
+			</a>
 			<a href="http://sketch.bysusanlin.com">
 				<li>
 					Blog
 				</li>
 			</a>
+			<a href="http://shop.bysusanlin.com">
+				<li>
+					Shop
+				</li>
+			</a>
+			<a href="https://www.patreon.com/susan">
+				<li>
+					Patreon
+				</li>
+			</a>
 			<li class="typeLowlight">
 				&mdash;
-			</li>								
+			</li>
 			<li class="typeHighlight">
 				&#10048;
 			</li>
