--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -1,5 +1,5 @@
 {% include '_tpls/header.html' %}
-	
+
 	<title>Susan &times; Talks</title>
 
 </head>
@@ -7,7 +7,7 @@
 <body>
 
 	<div id="talks">
-		
+
 		<div class="intro">
 
 			<h2>
@@ -20,7 +20,9 @@
 
 			<p>
 				Past Talks:
-				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> </li>
+				<li> WaffleJS &mdash; <a href="https://ti.to/wafflejs/august">No Wasted Paint</a> | <a href="http://sketch.bysusanlin.com/post/126377952333/no-wasted-paint">Write-up</a> </li>
+
+				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> | <a href="#speaking-the-code">Video</a> </li>
 
 				<li> Thoughtbot Product Design Talks &mdash; <a href="http://www.eventbrite.com/e/taco-tuesdays-a-product-design-talk-series-hosted-by-thoughtbot-tickets-11179142115"> Process is Ugly</a> </li>
 
@@ -36,7 +38,9 @@
 
 		<div class="video">
 
-			<img src="/images/bysusanlin-speaking.jpg">
+			<a name="speaking-the-code"></a>
+
+			<img src="/images/talks/bysusanlin-speaking.jpg">
 
 			<br><br>
 
@@ -45,7 +49,7 @@
 			</div>
 
 			<h2> Speaking the Code </h2>
-			<p> 
+			<p>
 				Recording of my talk for IXDA SF. I spoke about working with engineers using Trulia's component library.
 				<br><br>
 				<a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">Slides on SpeakerDeck.</a>
