--- a/src/_tpls/header.html
+++ b/src/_tpls/header.html
@@ -4,14 +4,12 @@
 	<meta charset="utf-8">
 
 	<meta name="viewport" content="width=device-width">
-	
+
 	<meta name="description" content="Websites! @bysusanlin">
 	<meta name="author" content="Susan Lin, Susan L., Susan, bysusanlin, @bysusanlin">
 
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
-		
+	<meta name="p:domain_verify" content="89bcb4858abdc44a2d4c6a4c223f34d8"/>
+
 	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
-
-	<script src="http://use.typekit.net/bku8hxc.js"></script>
-	<script>try{Typekit.load();catch(e){</script>
