--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,6 +1,6 @@
 {% include '_tpls/header.html' %}
-	
-	<title>Susan &times; Talks</title>
+
+<title>Susan &times; About</title>
 
 </head>
 
@@ -15,35 +15,26 @@
 			</h2>
 
 			<p>
-
-				Hello World; Susan designs for a living. Currently, she works on <a href="http://guestcenter.opentable.com">OpenTable's restaurant product.</a> She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
-
-				<br><br>
-
-				She sketches incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://sketch.bysusanlin.com/tagged/ghiblistainedglass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all. 
+				Hello World; Susan is a Designer who codes at <a href="http://teamtreehouse.com">Treehouse</a> and an Illustrator.
 
 				<br><br>
 
-				She enjoys games and books. 
+				Previously, she worked inhouse on design teams and freelanced for start-ups where she <a href="/talks">built styleguides</a> in addition to user experiences. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
 
 				<br><br>
 
-				Elsewhere on the internet: 
-				<li> 
-					<a href="http://sketch.bysusanlin.com">Tumblr (Blog)</a> 
-				</li>				
-				<li> 
-					<a href="http://instagram.com/susanl">Instagram</a> 
-				</li>				
-				<li> 
-					<a href="http://twitter.com/bysusanlin">Twitter</a> 
-				</li>				
-				<li> 
-					<a href="http://pinterest.com/susanl/pins">Pinterest</a> 
-				</li>
-				<li>
-					<a href="http://dribbble.com/bysusanlin">Dribbble</a>
-				</li>
+				She illustrates incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://sketch.bysusanlin.com/tagged/ghiblistainedglass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all.
+
+				<br><br>
+
+				Elsewhere on the internet: <br>
+				<a href="http://sketch.bysusanlin.com">Blog</a> |
+				<a href="http://instagram.com/susanl">Instagram</a> |
+				<a href="http://twitter.com/bysusanlin">Twitter</a> |
+				<a href="http://pinterest.com/susanl/pins">Pinterest</a> |
+				<a href="http://dribbble.com/bysusanlin">Dribbble</a> |
+				<a href="http://codepen.io/bysusanlin">CodePen</a> |
+				<a href="http://patreon.com/susan">Patreon</a>
 
 			</p>
 
@@ -51,20 +42,21 @@
 
 		<div>
 
-			<img src="/images/bysusanlin.jpg">
+			<br>
+			<img src="/images/about/bysusanlin.tattoo.jpg">
+			<br>
 
 			<p>
 				I drafted, designed, and coded this bit of the internet. The landing page is made with love to the Mother series.
 				<br><br>
-				<a href="http://sketch.bysusanlin.com/tagged/pixel-art">See the original pixel artwork.</a> 
+				<a href="http://sketch.bysusanlin.com/tagged/pixel-art">See the pixel artwork process.</a>
 				<br>
 				<a href="https://github.com/bysl/bysl.github.io">View the source code on Github.</a>
-				<br><br>
-				&#x2764;
 			</p>
 		</div>
 
 	</div> <!--about-->
+
 
 {% include '_tpls/nav.html' %}
 {% include '_tpls/footer.html' %}
