updating src to be up to date, major rehaul on site navigation layout

--- a/src/_tpls/footer.html
+++ b/src/_tpls/footer.html
@@ -26,6 +26,12 @@
 				</li>
 			</a>
 
+			<a href="/sketchnotes">
+				<li>
+					Sketchnotes
+				</li>
+			</a>
+
 			<a href="/talks">
 				<li>
 					Talks
@@ -35,6 +41,12 @@
 			<a href="http://sketch.bysusanlin.com">
 				<li>
 					Blog
+				</li>
+			</a>
+
+			<a href="https://www.levelframes.com/artists/susan-lin">
+				<li>
+					Level Frames
 				</li>
 			</a>
 
@@ -57,7 +69,7 @@
 		<div class="footnote">
 			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
-			Last updated September 2015. P.S. I believe in you.
+			&copy; Susan Lin, 2003-2015.
 		</div>
 
 	</footer>
