--- a/src/_tpls/header.html
+++ b/src/_tpls/header.html
@@ -1,15 +1,36 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
+<header>
 
-	<meta name="viewport" content="width=device-width">
+  <ul>
+		<a href="/about">
+      <li>
+        About
+      </li>
+    </a>
+    <a href="/design">
+      <li>
+        Design
+      </li>
+    </a>
+    <a href="/illustration">
+      <li>
+        Illustration
+      </li>
+    </a>
+    <a href="/sketchnotes">
+      <li>
+        Sketchnotes
+      </li>
+    </a>
+    <a href="/talks">
+      <li>
+        Talks
+      </li>
+    </a>
+    <a href="http://sketch.bysusanlin.com">
+      <li>
+        Blog
+      </li>
+    </a>
+  </ul>
 
-	<meta name="description" content="Websites! @bysusanlin">
-	<meta name="author" content="Susan Lin, Susan L., Susan, bysusanlin, @bysusanlin">
-
-	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
-	<meta name="p:domain_verify" content="89bcb4858abdc44a2d4c6a4c223f34d8"/>
-
-	<link rel="stylesheet" href="/css/screen.css">
-	<link rel="SHORTCUT ICON" href="/favicon.ico">
+</header>
