--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,4 +1,4 @@
-{% include '_tpls/header.html' %}
+{% include '_tpls/head.html' %}
 
 <title>Susan &times; About</title>
 
@@ -6,7 +6,9 @@
 
 <body>
 
-	<div id="about">
+	<div class="container">
+
+		{% include '_tpls/header.html' %}
 
 		<div class="intro">
 
@@ -15,11 +17,11 @@
 			</h2>
 
 			<p>
-				Hello World; Susan is a Designer who codes at <a href="http://teamtreehouse.com">Treehouse</a> and an Illustrator.
+				Hello World; Susan is a Designer who codes at <a href="http://teamtreehouse.com">Treehouse</a> and an Illustrator of many mediums.
 
 				<br><br>
 
-				Previously, she worked inhouse on design teams and freelanced for start-ups where she <a href="/talks">built styleguides</a> in addition to user experiences. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
+				Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at OpenTable and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
 
 				<br><br>
 
