--- a/src/design/index.html
+++ b/src/design/index.html
@@ -1,4 +1,4 @@
-{% include '_tpls/header.html' %}
+{% include '_tpls/head.html' %}
 
 	<title>Susan &times; Design</title>
 
@@ -6,10 +6,12 @@
 
 <body>
 
-	<div id="work">
+	<div class="container">
+
+		{% include '_tpls/header.html' %}
 
 		<div class="intro">
-			<h2> Design Work </h2>
+			<h2> Product Design &amp; CSS Styleguides </h2>
 			<p>
 		 		These are some of my favorite things I've had the honor of designing and coding.
 		 		<br><br>
