--- a/src/talks/index.html
+++ b/src/talks/index.html
@@ -1,12 +1,14 @@
-{% include '_tpls/header.html' %}
+{% include '_tpls/head.html' %}
 
 	<title>Susan &times; Talks</title>
 
 </head>
 
 <body>
+	
+	<div class="container">
 
-	<div id="talks">
+		{% include '_tpls/header.html' %}
 
 		<div class="intro">
 
