updating website with new navigation structure and new section: sketchnotes

--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,44 @@
 
 <body>
 
-	<div id="about">
+	<div class="container">
+
+		<header>
+
+  <ul>
+		<a href="/about">
+      <li>
+        About
+      </li>
+    </a>
+    <a href="/design">
+      <li>
+        Design
+      </li>
+    </a>
+    <a href="/illustration">
+      <li>
+        Illustration
+      </li>
+    </a>
+    <a href="/sketchnotes">
+      <li>
+        Sketchnotes
+      </li>
+    </a>
+    <a href="/talks">
+      <li>
+        Talks
+      </li>
+    </a>
+    <a href="http://sketch.bysusanlin.com">
+      <li>
+        Blog
+      </li>
+    </a>
+  </ul>
+
+</header>
 
 		<div class="intro">
 
@@ -29,11 +66,11 @@
 			</h2>
 
 			<p>
-				Hello World; Susan is a Designer who codes at <a href="http://teamtreehouse.com">Treehouse</a> and an Illustrator.
+				Hello World; Susan is a Designer who codes at <a href="http://teamtreehouse.com">Treehouse</a> and an Illustrator of many mediums.
 
 				<br><br>
 
-				Previously, she worked inhouse on design teams and freelanced for start-ups where she <a href="/talks">built styleguides</a> in addition to user experiences. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
+				Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at OpenTable and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
 
 				<br><br>
 
@@ -72,56 +109,52 @@
 	</div> <!--about-->
 
 
-	<nav>
-		<ul>
-			<a href="/">
-				<li>
-					<img src="/images/bysusanlin-totoro.svg" height="40px">
-				</li>
-			</a>
-			<a href="/about">
-				<li>
-					About
-				</li>
-			</a>
-			<a href="/design">
-				<li>
-					Design
-				</li>
-			</a>
-			<a href="/illustration">
-				<li>
-					Illustration
-				</li>
-			</a>
-			<a href="/talks">
-				<li>
-					Talks
-				</li>
-			</a>
-			<a href="http://sketch.bysusanlin.com">
-				<li>
-					Blog
-				</li>
-			</a>
-			<a href="http://shop.bysusanlin.com">
-				<li>
-					Shop
-				</li>
-			</a>
-			<a href="https://www.patreon.com/susan">
-				<li>
-					Patreon
-				</li>
-			</a>
-			<li class="typeLowlight">
-				&mdash;
-			</li>
-			<li class="typeHighlight">
-				&#10048;
-			</li>
-		</ul>
-	</nav>
+<nav>
+
+	<a href="/">
+		<img src="/images/bysusanlin-totoro.svg" height="60px">
+	</a>
+
+	<p>
+		Upcoming Events
+	</p>
+
+	<p>
+		<a href="http://alternativepressexpo.com">Alternative Press Expo</a> <br>
+		Oct 3-4, Booth 246
+	</p>
+
+	<p>
+		<a href="http://castrostreetfair.org">Castro Street Fair</a> <br>
+		Oct 4, spark arts
+	</p>
+
+	<p>
+		<a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
+		Spring 2016
+	</p>
+
+	<div class="typeLowlight"> &mdash; </div>
+
+		<p>
+			Support My Work
+		</p>
+
+		<p>
+			<a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
+			Framed Originals and Prints
+		</p>
+		<p>
+			<a href="http://shop.bysusanlin.com"> Shop </a>
+			<br>
+			Unframed Prints and Stickers
+		</p>
+		<p>
+			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
+			Monthly Support
+		</p>
+
+</nav>
 <footer>
 
 		<ul>
@@ -150,6 +183,12 @@
 				</li>
 			</a>
 
+			<a href="/sketchnotes">
+				<li>
+					Sketchnotes
+				</li>
+			</a>
+
 			<a href="/talks">
 				<li>
 					Talks
@@ -159,6 +198,12 @@
 			<a href="http://sketch.bysusanlin.com">
 				<li>
 					Blog
+				</li>
+			</a>
+
+			<a href="https://www.levelframes.com/artists/susan-lin">
+				<li>
+					Level Frames
 				</li>
 			</a>
 
@@ -181,7 +226,7 @@
 		<div class="footnote">
 			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
-			Last updated September 2015. P.S. I believe in you.
+			&copy; Susan Lin, 2003-2015.
 		</div>
 
 	</footer>
