--- a/design/index.html
+++ b/design/index.html
@@ -20,10 +20,47 @@
 
 <body>
 
-	<div id="work">
+	<div class="container">
+
+		<header>
+
+  <ul>
+		<a href="/about">
+      <li>
+        About
+      </li>
+    </a>
+    <a href="/design">
+      <li>
+        Design
+      </li>
+    </a>
+    <a href="/illustration">
+      <li>
+        Illustration
+      </li>
+    </a>
+    <a href="/sketchnotes">
+      <li>
+        Sketchnotes
+      </li>
+    </a>
+    <a href="/talks">
+      <li>
+        Talks
+      </li>
+    </a>
+    <a href="http://sketch.bysusanlin.com">
+      <li>
+        Blog
+      </li>
+    </a>
+  </ul>
+
+</header>
 
 		<div class="intro">
-			<h2> Design Work </h2>
+			<h2> Product Design &amp; CSS Styleguides </h2>
 			<p>
 		 		These are some of my favorite things I've had the honor of designing and coding.
 		 		<br><br>
@@ -138,56 +175,52 @@
 
 	</div> <!-- design -->
 
-	<nav>
-		<ul>
-			<a href="/">
-				<li>
-					<img src="/images/bysusanlin-totoro.svg" height="40px">
-				</li>
-			</a>
-			<a href="/about">
-				<li>
-					About
-				</li>
-			</a>
-			<a href="/design">
-				<li>
-					Design
-				</li>
-			</a>
-			<a href="/illustration">
-				<li>
-					Illustration
-				</li>
-			</a>
-			<a href="/talks">
-				<li>
-					Talks
-				</li>
-			</a>
-			<a href="http://sketch.bysusanlin.com">
-				<li>
-					Blog
-				</li>
-			</a>
-			<a href="http://shop.bysusanlin.com">
-				<li>
-					Shop
-				</li>
-			</a>
-			<a href="https://www.patreon.com/susan">
-				<li>
-					Patreon
-				</li>
-			</a>
-			<li class="typeLowlight">
-				&mdash;
-			</li>
-			<li class="typeHighlight">
-				&#10048;
-			</li>
-		</ul>
-	</nav>
+<nav>
+
+	<a href="/">
+		<img src="/images/bysusanlin-totoro.svg" height="60px">
+	</a>
+
+	<p>
+		Upcoming Events
+	</p>
+
+	<p>
+		<a href="http://alternativepressexpo.com">Alternative Press Expo</a> <br>
+		Oct 3-4, Booth 246
+	</p>
+
+	<p>
+		<a href="http://castrostreetfair.org">Castro Street Fair</a> <br>
+		Oct 4, spark arts
+	</p>
+
+	<p>
+		<a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
+		Spring 2016
+	</p>
+
+	<div class="typeLowlight"> &mdash; </div>
+
+		<p>
+			Support My Work
+		</p>
+
+		<p>
+			<a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
+			Framed Originals and Prints
+		</p>
+		<p>
+			<a href="http://shop.bysusanlin.com"> Shop </a>
+			<br>
+			Unframed Prints and Stickers
+		</p>
+		<p>
+			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
+			Monthly Support
+		</p>
+
+</nav>
 <footer>
 
 		<ul>
@@ -216,6 +249,12 @@
 				</li>
 			</a>
 
+			<a href="/sketchnotes">
+				<li>
+					Sketchnotes
+				</li>
+			</a>
+
 			<a href="/talks">
 				<li>
 					Talks
@@ -225,6 +264,12 @@
 			<a href="http://sketch.bysusanlin.com">
 				<li>
 					Blog
+				</li>
+			</a>
+
+			<a href="https://www.levelframes.com/artists/susan-lin">
+				<li>
+					Level Frames
 				</li>
 			</a>
 
@@ -247,7 +292,7 @@
 		<div class="footnote">
 			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
-			Last updated September 2015. P.S. I believe in you.
+			&copy; Susan Lin, 2003-2015.
 		</div>
 
 	</footer>
