refinements on the nav to be better spaced, better copy for many pages, modified pixel art to be more flexible, added treehouse to design section, refined sketchnotes page

--- a/src/illustration/index.html
+++ b/src/illustration/index.html
@@ -11,9 +11,9 @@
 		{% include '_tpls/header.html' %}
 
 		<div class="intro">
-			<h2> Illustrations </h2>
+			<h2> Illustration </h2>
 			<p>
-		 		These are some of my favorite things I've had the honor of sketching and painting.
+		 		This will be updated with my favorite sketching and painting projects.
 		 		<br><br>
 		 		Availability:
 		 		<li>
@@ -22,8 +22,6 @@
 		 		<li>
 		 			I'll consider illustration commissions! bysusanlin at gmail.
 		 		</li>
-		 		<br><br>
-		 		For a formal work history, take this <a href="http://bysusanlin.com/SusanLin-resume.pdf">PDF resume.</a>
 			</p>
 		</div>
 
